--- a/carrito/templates/carritos/carrito_list.html
+++ b/carrito/templates/carritos/carrito_list.html
@@ -9,19 +9,25 @@
 {% load humanize %}
 
 {% block content %}
-<h5 id="promocion-text" class="text-justify">Tsundoku ofrece los mangas más emocionantes que pronto estarán disponibles para su compra.
-  Descubre nuevas historias y personajes fascinantes y haz tu pedido ahora para ser uno de los primeros en disfrutar de
-  estas increíbles historias. Ofrecemos envío rápido y seguro para que puedas empezar a disfrutar de tus mangas lo antes
-  posible. ¡No te pierdas la oportunidad de elegir Tsundoku para tus compras de manga!</h5>
+<div >
+  <h5 id="promocion-text" class="  text-justify">Tsundoku ofrece los mangas más emocionantes que pronto estarán
+    disponibles para su compra.
+    Descubre nuevas historias y personajes fascinantes y haz tu pedido ahora para ser uno de los primeros en disfrutar
+    de
+    estas increíbles historias. Ofrecemos envío rápido y seguro para que puedas empezar a disfrutar de tus mangas lo
+    antes
+    posible. ¡No te pierdas la oportunidad de elegir Tsundoku para tus compras de manga!</h5>
+</div>
+
 <div class="card-deck">
   {% for post in publicacion %}
   <div class="card text-white bg-dark mb-3">
-    <div class="producto" id="producto{{post.pk}}">
-      <h2 class="text_center"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+    <div class=" producto" id="producto{{post.pk}}">
+      <h4 class="text_center"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h4>
       {% if post.upload %}
-      <img class="card-img text-center imagen-ajustada " src="{{post.upload.url}}" alt="imagen-producto" />
+      <img class="card-img text-center imagen-ajustada h-10" src="{{post.upload.url}}" alt="imagen-producto" />
       {% endif %}
-      <h4 class="text-center"> Precio {{ post.price }}</h4>
+      <h6 id="precio" class=" text-center"> Precio {{ post.price }}</h6>
       <p>{{ post.text|linebreaksbr }}</p>
 
       <button class="btn btn-primary" type="button"
@@ -32,7 +38,10 @@
   {% endfor %}
 </div>
 
+
+
 <div id="cardCarrito">
+
   <div id="carritoText" class="card mb-3 bg-dark">
     <div class="row no-gutters">
       <div class="col-md-4 mx-auto ">
@@ -51,8 +60,11 @@
         </div>
       </div>
     </div>
+
   </div>
+
 </div>
+
 {% endblock %}
 
 {% block script %}
