--- a/carrito/templates/carritos/index.html
+++ b/carrito/templates/carritos/index.html
@@ -37,7 +37,7 @@
           <img src="{% static 'img/Punpun.gif' %}" class="d-block w-100" alt="...">
           <div class="">
             <div  class="carousel-caption d-none d-md-block ">
-              <h5 class="text-center">Oyasumi Punpun</h5>
+              <h5 class="text-center text-warning">Oyasumi Punpun</h5>
               <p class="text-center">Es un manga que sigue la vida de Punpun Onodera, un joven con apariencia de
                 pájaro, mientras atraviesa la difícil transición de la infancia a la adultez. La historia
                 explora temas como el amor, la soledad, la depresión y la búsqueda de sentido en la vida. A
@@ -52,7 +52,7 @@
           <img src="{% static 'img/One-piece.gif' %}" class="d-block w-100" alt="...">
           <div class="text-container">
             <div  class="carousel-caption d-none d-md-block">
-              <h5 class="text-center">One Piece</h5>
+              <h5 class="text-center text-warning">One Piece</h5>
               <p class="text-center">Es una serie de manga y anime que sigue las aventuras del joven pirata Monkey D.
                 Luffy y su
                 tripulación en su búsqueda del tesoro más grande del mundo. Con personajes memorables,
