--- a/carrito/templates/carritos/ubicacion.html
+++ b/carrito/templates/carritos/ubicacion.html
@@ -8,22 +8,25 @@
 
 
 <!--  LINK MAPA GOOGLE -->
-<div class="container">
+<div>
+  <div class="text-center ">
     <div class="row">
       <div class="col-md-6 text-left">
         <div id="map-container" class="d-flex justify-content-start">
           <div id="map"></div>
-          
+
         </div>
       </div>
       <div class="col-md-6 ">
         <div class="row">
           <div id="fotoubi">
-            <img src="{% static 'img/ubicacion-item.jpeg' %}" alt="UBI">
+            <img class="col-md-12" src="{% static 'img/ubicacion-item.jpeg' %}" alt="UBI">
           </div>
-          <div class="col-md-12 text-justify">
-            <h4>¡Te damos la bienvenida a nuestro local físico de Tsudonku! Nos complace ofrecerte un espacio dedicado a los
-              amantes del manga, donde podrás sumergirte en un ambiente único y disfrutar de una amplia selección de títulos
+          <div class=" text-justify ">
+            <h4>¡Te damos la bienvenida a nuestro local físico de Tsudonku! Nos complace ofrecerte un espacio dedicado a
+              los
+              amantes del manga, donde podrás sumergirte en un ambiente único y disfrutar de una amplia selección de
+              títulos
               fascinantes. Nuestro local está ubicado en 467 Av. Valparaíso, Galería calle de
               Cristal, y estamos ansiosos por recibirte y brindarte una
               experiencia de compra inigualable. Explora nuestras estanterías de mangas, déjate llevar por la magia
@@ -33,12 +36,13 @@
       </div>
     </div>
   </div>
-  
+</div>
 
-  
+
+
 {% endblock %}
 {% block script %}
-  <script src="{% static 'js/ubicacion.js' %}"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH7J--ygikgoeHi1DX6QaMQavI0quRunU&callback=initMap"
-    async defer></script>
+<script src="{% static 'js/ubicacion.js' %}"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH7J--ygikgoeHi1DX6QaMQavI0quRunU&callback=initMap" async
+  defer></script>
 {% endblock script %}
