--- a/carrito/templates/carritos/base.html
+++ b/carrito/templates/carritos/base.html
@@ -20,7 +20,7 @@
  
 </head>
 
-<body>
+<body >
   <!-- Navbar -->
   <nav id="barra" class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="{% url 'index' %}"><img class="logo" src="{% static 'img/tsudonkuLogo.png' %}"
@@ -61,7 +61,10 @@
       {% endblock %}
     </div>
   </section>
-  <footer class="bg-dark text-light">
+
+
+ <!-- pie de pagina -->
+  <footer  id="pie" class="bg-dark text-light ">
     <div class="container py-4">
       <div class="row">
         <div class="col-md-4">
@@ -99,12 +102,7 @@
           </form>
         </div>
       </div>
-      <div id="centrarPie">
-        <hr>
-        <p class="text-center">© 2023 TsundokuStore. Todos los derechos reservados.</p>
-        <a id="insignea" class="text-center" href="http://www.w3.org/WAI/WCAG1AA-Conformance"
-          title="Explicación del Nivel Doble-A de Conformidad">
-          <img height="32" width="88" src="http://www.w3.org/WAI/wcag1AA" alt="Icono de conformidad  Doble-A"></a>
+
       </div>
     </div>
   </footer>
