--- a/carrito/templates/carritos/formulario.html
+++ b/carrito/templates/carritos/formulario.html
@@ -11,9 +11,9 @@
 
 
 <!-- Formulario -->
-<div id="texto_formulario">
+<div id="texto_formulario" >
     <h1 class="text-center text-warning">FORMULARIO DE DUDAS</h1>
-    <h3 id="idh3" class="text-center">¡Bienvenido a Tsudonku!</h3>
+    <h3  class="text-center text-info">¡Bienvenido a Tsudonku!</h3>
     <h5 id="idh5" class="text-justify">Nos encanta que estés interesado/a en nuestros mangas. Si tienes alguna duda o
       consulta,
       no dudes en escribirnos utilizando el siguiente formulario. Estamos aquí para ayudarte en todo lo que necesites y
@@ -76,7 +76,6 @@
       </form>
     </div>
   </div>
-  <p>    </p>
 
 
   {% endblock content %}
