--- a/carrito/templates/carritos/post_edit.html
+++ b/carrito/templates/carritos/post_edit.html
@@ -2,46 +2,29 @@
 {% load static %}
 {% block links %}
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-<link rel="stylesheet" href="{% static 'css/letras.css' %}">
+<link rel="stylesheet" href="{% static 'css/productos.css' %}">
 {% endblock links %}
 
 
 
 
 {% block content %}
+</div>
+<img src="{% static 'img/subida.png' %}" alt="carrito" class="card-img">
 
-<!-- Button trigger modal -->
-<div class="card">
-    <button type="button" class="btn btn-primary text-center" data-toggle="modal" data-target="#exampleModal">
-        Subir
-    </button>
-
-    <!-- Modal -->
-    <div class="modal fade bg-secondary " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog ">
-            <div class="modal-content bg-dark">
-                <div class="modal-header">
-                    <h5 class="modal-title text-white" id="exampleModalLabel">Nuevos Productos</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <form method="POST" enctype="multipart/form-data" class="post-form">
-                    <div class="modal-body text-white">
-                        <h2>Insertar Datos:</h2>
+<div id="subida" >
+  <div id="contenedor-tamaño bg-white" >
+    <div id="contenedor_subida" class="container text-center bg-info h-75">
+      <form id="formulario" method="POST" enctype="multipart/form-data" class="col-md-6-center post-form">
+        <div class="form-group">
+            <h2>Insertar Datos:</h2>
 
                         {% csrf_token %}
                         {{ form.as_p }}
 
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary text-white" data-dismiss="modal">Close</button>
-                        <button type="submit" value="Submit" class="btn btn-primary text-white">Save changes</button>
-                    </div>
-                </form>
-            </div>
-        </div>
+            <button type="button" class="btn btn-secondary text-white" data-dismiss="modal">Close</button>
+            <button id="enviar" type="submit" value="Submit" class="btn btn-primary text-white">Save changes</button>
+      </form>
     </div>
 </div>
 {% endblock %}
