--- a/carrito/templates/carritos/post_edit.html
+++ b/carrito/templates/carritos/post_edit.html
@@ -22,7 +22,7 @@
                         {% csrf_token %}
                         {{ form.as_p }}
 
-            <button type="button" class="btn btn-secondary text-white" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary text-white">Close</button>
             <button id="enviar" type="submit" value="Submit" class="btn btn-primary text-white">Save changes</button>
       </form>
     </div>
