Listo para prueba

--- a/carrito/static/css/styles.css
+++ b/carrito/static/css/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 #barra{
-  background-color: rgba(21, 21, 27, 0.678);
+  background-color: rgb(0, 0, 0);
 }
 
 a {
@@ -118,6 +118,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Pie de página */
 
 #pie {
+  
   
   background-color: #ffffffb0;
   padding: 20px 0;
@@ -220,7 +221,15 @@ color: #ffffff;
 }
 #bloque{
   margin-top: 2%;
+  width: 50%; /* Ajusta el valor según tus necesidades */
+  margin: 0 auto; /* Centra la tarjeta horizontalmente */
+  
 }
+#descripcion{
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
 
 
 
@@ -247,4 +256,18 @@ color: #ffffff;
   position: relative;
   margin: auto;
   
+}
+
+#imagenedit{
+  width: 300px;
+  height: 400px;
+  max-width: min-content;
+  margin-top: 2%;
+}
+
+#imagenprod{
+  width:auto;
+  height: 8cm;
+  min-height: 50%;
+  margin-top: 2%;
 }
