--- a/carrito/static/css/productos.css
+++ b/carrito/static/css/productos.css
@@ -1,4 +1,9 @@
-
+body{
+  background-image: url('/static/img/fondo-productos.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 #carta {
   max-width: 90%;
   padding: 7%;
@@ -59,6 +64,7 @@ h2 {
 #promocion-text {
   padding-left: 2%;
   padding-right: 2%;
+  margin-top: 2%;
   font-style: oblique;
   color: bisque;
 }
@@ -137,4 +143,8 @@ font-family:Impact ;
 
 .card-body {
   padding: 10px; /* Ajusta el padding deseado */
+}
+
+#fondoProd{
+  position: relative;
 }
