--- a/carrito/templates/carritos/ubicacion.html
+++ b/carrito/templates/carritos/ubicacion.html
@@ -22,8 +22,8 @@
           <div id="fotoubi">
             <img class="col-md-12" src="{% static 'img/ubicacion-item.jpeg' %}" alt="UBI">
           </div>
-          <div class=" text-justify ">
-            <h4>¡Te damos la bienvenida a nuestro local físico de Tsudonku! Nos complace ofrecerte un espacio dedicado a
+          <div  class=" text-justify ">
+            <h4  class="container text-white">¡Te damos la bienvenida a nuestro local físico de Tsudonku! Nos complace ofrecerte un espacio dedicado a
               los
               amantes del manga, donde podrás sumergirte en un ambiente único y disfrutar de una amplia selección de
               títulos
