--- a/carrito/templates/carritos/publicacion_edit.html
+++ b/carrito/templates/carritos/publicacion_edit.html
@@ -15,7 +15,7 @@
 <div id="subida" >
   <div id="contenedor-tamaño bg-white" >
     <div id="contenedor_subida" class="container text-center bg-info h-75">
-      <form id="formulario" method="POST" enctype="multipart/form-data" class="col-md-6-center post-form">
+      <form id="formulario" method="POST" enctype="multipart/form-data" class="col-md-6-center>
         <div class="form-group">
             <h2>Insertar Datos:</h2>
 
@@ -25,6 +25,7 @@
             <button type="button" class="btn btn-secondary text-white">Close</button>
             <button id="enviar" type="submit" value="Submit" class="btn btn-primary text-white">Save changes</button>
       </form>
+      {{mensaje}}
     </div>
 </div>
 {% endblock %}
