--- a/carrito/templates/carritos/contacto.html
+++ b/carrito/templates/carritos/contacto.html
@@ -33,6 +33,7 @@
                 {{ form.as_p }}
             <button id="enviar" type="submit" value="Submit" class="btn btn-primary text-white">Save changes</button>
       </form>
+      {{mensaje}}
     </div>
 </div>
 
