--- a/carrito/templates/carritos/ubicacion.html
+++ b/carrito/templates/carritos/ubicacion.html
@@ -14,7 +14,7 @@
       <div class="col-md-6 text-left">
         <div id="map-container" class="d-flex justify-content-start">
           <div id="map"></div>
-
+          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH7J--ygikgoeHi1DX6QaMQavI0quRunU"></script>
         </div>
       </div>
       <div class="col-md-6 ">
