--- a/carrito/templates/registration/registro.html
+++ b/carrito/templates/registration/registro.html
@@ -1,26 +1,27 @@
 {% extends 'carritos/base.html' %}
 {% load static %}
+
 {% block links %}
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 <link rel="stylesheet" href="{% static 'css/productos.css' %}">
 {% endblock links %}
 
 {% block content %}
-<br><br><br><br><br><br>
 <div class="container">
     <div class="row">
-        <div class="col-12 col-md-6 offset-md-3">
+        <div class="col-md-6 offset-md-3">
             <div class="card text-white bg-dark mb-3">
-                <div class="card-body">
-                    <h2 class="text-dark text text-center">Ingresa tus Credenciales</h2>
-                    <hr class="text-dark">
-                    <form action="" method="post">
+                <div class="card-body text-left">
+                    <h2 class="text-white">Ingresa tus Credenciales</h2>
+                    <hr class="text-white">
+                    <form action="" method="POST" class="d-flex flex-column align-items-start">
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <br>
-                        <a href="{% url 'index' %}">Ir al inicio</a> |
-                        <a href="{% url 'login' %}">Iniciar Sesiòn</a>
-                        <input type="submit" value="Ingresar" class="btn btn-success float-end">
+                        <div class="d-flex justify-content-between">
+                            <a href="{% url 'index' %}">Ir al inicio</a>
+                            <a href="{% url 'login' %}">Iniciar Sesión</a>
+                            <input type="submit" value="Ingresar" class="btn btn-success">
+                        </div>
                     </form>
                 </div>
             </div>
