--- a/carrito/templates/carritos/carrito_list.html
+++ b/carrito/templates/carritos/carrito_list.html
@@ -32,7 +32,7 @@
 
         <button class="btn btn-primary" type="button"
           onclick="agregarAlCarrito('{{publi.pk}}', '{{publi.title}}', {{publi.price}})">Agregar</button>
-        <button class="btn btn-danger" type="button" onclick="eliminarDelCarrito('{{publi.pk}}')">Eliminar</button>
+        <button class="btn btn-danger" type="button" onclick="eliminarDelCarrito('{{publi.pk}}')">Descartar</button>
       </div>
     </div>
     {% endfor %}
