--- a/carrito/templates/carritos/base.html
+++ b/carrito/templates/carritos/base.html
@@ -45,7 +45,7 @@
           <a class="nav-link" href="{% url 'ubicacion' %}">Ubícanos</a>
         </li>
         <li class="nav-item">
-        {% if user.is_authenticated %}
+        {% if user.is_superuser %}
           <a class="nav-link" href="{% url 'publicacion_new' %}">Subir</a>
         {% endif %}
         {% if user.is_authenticated %}
@@ -108,13 +108,6 @@
           </form>
         </div>
       </div>
-      <p class="text-center">
-        <a  href="http://jigsaw.w3.org/css-validator/check/referer">
-            <img style="border:0;width:88px;height:31px"
-                src="http://jigsaw.w3.org/css-validator/images/vcss"
-                alt="¡CSS Válido!" />
-        </a>
-    </p>
 
       </div>
     </div>
